common/templates/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd  # Ingress Controller가 배포된 네임스페이스
  annotations:
    cert-manager.io/issuer: "issuer"  # TLS 인증서 발급을 위한 issuer 설정
spec:
  tls:
  - secretName: argocd-tls  # 인증서를 저장할 Secret 이름
    hosts:
    - www.adaptors.site  # 인증서를 발급할 도메인 이름
    - adaptors.site
  rules:
  - host: www.adaptors.site  # 첫 번째 호스트 이름
    http:
      paths:
      - path: /argo  # 요청 경로
        pathType: Prefix
        backend:
          service:
            name: argocd-server  # Argo CD 서비스 이름
            port:
              number: 80  # Argo CD 서비스의 포트
  - host: adaptors.site  # 두 번째 호스트 이름
    http:
      paths:
      - path: /argo  # 요청 경로
        pathType: Prefix
        backend:
          service:
            name: argocd-server  # Argo CD 서비스 이름
            port:
              number: 80  # Argo CD 서비스의 포트
